@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2020/09/22 01:50:23 mrg Exp $
+
+SHA1 (File-Valet-1.07.tar.gz) = e661c73ccbf052cf3bf19a44f14b98c3d2d75c3e
+RMD160 (File-Valet-1.07.tar.gz) = 57fff4dc500562e73250b45d785dfa260c628f48
+SHA512 (File-Valet-1.07.tar.gz) = f0c6ab79bedadbc7a48ca810567cca597b1fdb5667e36d5bcbdd2c3dddf56903772d38ea30954c4c07c30b53f5a6786cf11607d4bbcc145938063a54f46b2f26
+Size (File-Valet-1.07.tar.gz) = 27123 bytes
