@@ -1,0 +1,1 @@
+Client for using the purpleair.com air quality sensor API
