@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2020/09/22 01:50:23 mrg Exp $
+
+SHA1 (Weather-PurpleAir-API-0.04.tar.gz) = ac94c51e3e864ea0be7724eb44ec90f6a0efe2b9
+RMD160 (Weather-PurpleAir-API-0.04.tar.gz) = 520ab78fc0f9f99a1b715ac3e916872bf48e736a
+SHA512 (Weather-PurpleAir-API-0.04.tar.gz) = ff276ec2d844fe420d0bfe855e79ee9f56b566496eef56203c77c0688d716a39fa9a8c68419fac178ee49a73e768499635d015f20fb27b973dfd50cb34d05886
+Size (Weather-PurpleAir-API-0.04.tar.gz) = 687774 bytes
